[package]
name = "harkive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.28"


[dependencies.windows]
version = "0.47.0"
features = [
    "Devices_Midi",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_Enumeration",
    "Storage_Streams",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
]
